# ai-sdk

./: .env.example  .gitignore  AGENTS.md  AGENT_INTERFACE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PRE_COMMIT_REPORT.md  README.md  justfile
ai-sdk-anthropic/: Cargo.toml  README.md
ai-sdk-anthropic/examples/: basic_tool_calling.rs  chat.rs  chat_tool_calling.rs  provider_defined_tools_simple.rs  provider_specific_bash_tool.rs  provider_specific_defined_tools.rs  simple_chat.rs  stream.rs  stream_tool_calling.rs  streaming_tool_calling.rs
ai-sdk-anthropic/src/: anthropic_tools.rs  client.rs  convert_to_message_prompt.rs  error.rs  get_cache_control.rs  language_model.rs  lib.rs  map_stop_reason.rs  options.rs  prepare_tools.rs  prompt.rs  provider.rs  provider_metadata_utils.rs  provider_tool.rs  settings.rs  tool.rs
ai-sdk-assemblyai/: Cargo.toml  README.md
ai-sdk-assemblyai/examples/: basic_transcription.rs  transcription.rs  transcription_with_options.rs
ai-sdk-assemblyai/src/: client.rs  error.rs  lib.rs  provider.rs  settings.rs  transcription.rs
ai-sdk-azure/: AZURE-IMPLEMENTATION.md  Cargo.toml  README.md
ai-sdk-azure/examples/: chat.rs  chat_tool_calling.rs  image_generation.rs  stream.rs  stream_tool_calling.rs  text_embedding.rs
ai-sdk-azure/src/: client.rs  lib.rs  provider.rs
ai-sdk-baseten/: Cargo.toml  README.md
ai-sdk-baseten/examples/: baseten_basic_chat.rs  baseten_custom_chat.rs  baseten_embeddings.rs  baseten_streaming.rs  chat.rs  chat_tool_calling.rs  stream.rs  stream_tool_calling.rs  text_embedding.rs
ai-sdk-baseten/src/: chat.rs  client.rs  embedding.rs  lib.rs  provider.rs  settings.rs
ai-sdk-cerebras/: Cargo.toml  README.md
ai-sdk-cerebras/examples/: chat.rs  chat_tool_calling.rs  stream.rs  stream_tool_calling.rs
ai-sdk-cerebras/src/: chat.rs  client.rs  error.rs  lib.rs  provider.rs  settings.rs
ai-sdk-core/: Cargo.toml  README.md
ai-sdk-core/src/: agent.rs  embed.rs  error.rs  generate_image.rs  generate_speech.rs  generate_text.rs  lib.rs  output.rs  prompt.rs  rerank.rs  storage_config.rs  storage_conversion.rs  stream_text.rs  stream_text.rs.backup  tool.rs  transcribe.rs  util.rs
ai-sdk-core/tests/: storage_error_handling_tests.rs
ai-sdk-deepseek/: Cargo.toml  README.md
ai-sdk-deepseek/examples/: basic_chat.rs  chat.rs  chat_tool_calling.rs  reasoning.rs  stream.rs  stream_tool_calling.rs  streaming_chat.rs
ai-sdk-deepseek/src/: client.rs  error.rs  lib.rs  provider.rs  settings.rs
ai-sdk-groq/: Cargo.toml  README.md
ai-sdk-groq/examples/: chat.rs  chat_tool_calling.rs  speech_generation.rs  stream.rs  stream_tool_calling.rs  transcription.rs
ai-sdk-groq/src/: client.rs  error.rs  lib.rs  provider.rs  settings.rs  speech.rs  transcription.rs
ai-sdk-huggingface/: Cargo.toml  README.md
ai-sdk-huggingface/examples/: basic_chat.rs  chat.rs  chat_tool_calling.rs  stream.rs  stream_tool_calling.rs  streaming_chat.rs
ai-sdk-huggingface/src/: client.rs  lib.rs  provider.rs  settings.rs
ai-sdk-openai/: Cargo.toml  README.md
ai-sdk-openai-compatible/: Cargo.toml  README.md
ai-sdk-openai-compatible/examples/: chat.rs  chat_tool_calling.rs  image_generation.rs  stream.rs  stream_tool_calling.rs  text_embedding.rs
ai-sdk-openai-compatible/src/: chat.rs  client.rs  completion.rs  embedding.rs  error.rs  image.rs  language_model.rs  lib.rs  provider.rs  settings.rs  utils.rs
ai-sdk-openai/examples/: basic_chat.rs  chat.rs  chat_tool_calling.rs  stream.rs  stream_tool_calling.rs  streaming_chat.rs
ai-sdk-openai/src/: chat.rs  client.rs  lib.rs  openai_provider.rs  provider.rs  settings.rs
ai-sdk-openai/tests/: provider_test.rs
ai-sdk-provider/: Cargo.toml
ai-sdk-provider-utils/: Cargo.toml
ai-sdk-provider-utils/src/: lib.rs  parse_provider_options.rs  tool.rs
ai-sdk-provider/src/: embedding_model.rs  error.rs  image_model.rs  language_model.rs  lib.rs  provider.rs  reranking_model.rs  shared.rs  speech_model.rs  transcription_model.rs
ai-sdk-storage/: Cargo.toml
ai-sdk-storage-filesystem/: Cargo.toml
ai-sdk-storage-filesystem/src/: conversation.rs  error.rs  id_generator.rs  index.rs  lib.rs  provider.rs  utils.rs
ai-sdk-storage/src/: conversation.rs  error.rs  lib.rs  message.rs  provider.rs  session.rs  storage.rs  utils.rs
ai-sdk-togetherai/: Cargo.toml  README.md
ai-sdk-togetherai/examples/: chat.rs  chat_tool_calling.rs  image_generation.rs  reranking.rs  stream.rs  stream_tool_calling.rs  text_embedding.rs
ai-sdk-togetherai/src/: chat_options.rs  client.rs  completion_options.rs  image.rs  lib.rs  provider.rs  settings.rs
ai-sdk-utils/: Cargo.toml
ai-sdk-utils/src/: id_generator.rs  lib.rs
ai-sdk-xai/: Cargo.toml  README.md
ai-sdk-xai/examples/: chat.rs  chat_tool_calling.rs  image_generation.rs  stream.rs  stream_tool_calling.rs
ai-sdk-xai/src/: chat.rs  client.rs  error.rs  lib.rs  provider.rs  settings.rs
llm-kit-anthropic/: Cargo.toml  README.md
llm-kit-anthropic/examples/: chat.rs  chat_tool_calling.rs  provider_specific_bash_tool.rs  stream.rs
llm-kit-anthropic/src/: anthropic_tools.rs  client.rs  convert_to_message_prompt.rs  error.rs  get_cache_control.rs  lib.rs  map_stop_reason.rs  prepare_tools.rs  prompt.rs  provider.rs  provider_metadata_utils.rs  provider_tool.rs
llm-kit-azure/: Cargo.toml  README.md
llm-kit-azure/examples/: chat.rs  image_generation.rs  stream.rs  stream_tool_calling.rs
llm-kit-azure/src/: lib.rs  provider.rs  settings.rs
llm-kit-baseten/: Cargo.toml  README.md
llm-kit-baseten/examples/: stream.rs
llm-kit-baseten/src/: chat.rs  client.rs  embedding.rs  error.rs  lib.rs
llm-kit-core/: Cargo.toml  README.md
llm-kit-core/src/: agent.rs  error.rs  generate_speech.rs  generate_text.rs  lib.rs  output.rs  prompt.rs  tool.rs  (+2 more)
llm-kit-elevenlabs/: Cargo.toml  README.md
llm-kit-groq/: Cargo.toml  README.md
llm-kit-huggingface/: Cargo.toml  README.md
llm-kit-openai-compatible/: Cargo.toml  README.md
llm-kit-provider/: Cargo.toml
llm-kit-provider-utils/: Cargo.toml
llm-kit-storage/: Cargo.toml
(+682 files in other folders)
