[workspace]
resolver = "3"
members = [
    "ai-sdk-core",
    "ai-sdk-provider",
    "ai-sdk-provider-utils",
    "ai-sdk-openai-compatible",
    "ai-sdk-openai",
    "ai-sdk-storage",
    "ai-sdk-storage-filesystem",
    "ai-sdk-anthropic",
    "ai-sdk-azure",
    "ai-sdk-cerebras",
    "ai-sdk-deepseek",
    "ai-sdk-elevenlabs",
    "ai-sdk-groq",
    "ai-sdk-xai",
    "ai-sdk-togetherai",
    "ai-sdk-huggingface",
    "ai-sdk-assemblyai",
    "ai-sdk-baseten",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["saribmahmood55@gmail.com"]
repository = "https://github.com/saribmah/llm-kit"

[workspace.dependencies]

# Virtual package for workspace-level examples
[package]
name = "llm-kit-examples"
version.workspace = true
edition.workspace = true
publish = false

[features]
storage = ["llm-kit-core/storage"]

[dependencies]
llm-kit-core = { path = "ai-sdk-core", features = ["storage"] }
llm-kit-provider = { path = "ai-sdk-provider" }
llm-kit-provider-utils = { path = "ai-sdk-provider-utils" }
llm-kit-openai-compatible = { path = "ai-sdk-openai-compatible" }
llm-kit-storage = { path = "ai-sdk-storage" }
llm-kit-storage-filesystem = { path = "ai-sdk-storage-filesystem" }
llm-kit-azure = { path = "ai-sdk-azure" }
llm-kit-cerebras = { path = "ai-sdk-cerebras" }
llm-kit-groq = { path = "ai-sdk-groq" }
llm-kit-xai = { path = "ai-sdk-xai" }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
async-trait = "0.1"
schemars = "0.8"
chrono = "0.4"
dotenvy = "0.15"

[[example]]
name = "agent_generate"
path = "examples/agent_generate.rs"

[[example]]
name = "agent_stream"
path = "examples/agent_stream.rs"

[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"

[[example]]
name = "basic_embedding"
path = "examples/basic_embedding.rs"

[[example]]
name = "basic_image"
path = "examples/basic_image.rs"

[[example]]
name = "conversation"
path = "examples/conversation.rs"

[[example]]
name = "tool_calling"
path = "examples/tool_calling.rs"

[[example]]
name = "multi_step_tools"
path = "examples/multi_step_tools.rs"

[[example]]
name = "basic_stream"
path = "examples/basic_stream.rs"

[[example]]
name = "stream_transforms"
path = "examples/stream_transforms.rs"

[[example]]
name = "partial_output"
path = "examples/partial_output.rs"

[[example]]
name = "stream_tool_calling"
path = "examples/stream_tool_calling.rs"

[[example]]
name = "type_safe_tools"
path = "examples/type_safe_tools.rs"

[[example]]
name = "storage_basic"
path = "examples/storage_basic.rs"
required-features = ["storage"]

[[example]]
name = "storage_filesystem_basic"
path = "examples/storage_filesystem_basic.rs"
required-features = ["storage"]

[[example]]
name = "storage_filesystem_conversation"
path = "examples/storage_filesystem_conversation.rs"
required-features = ["storage"]

[[example]]
name = "storage_conversation_full"
path = "examples/storage_conversation_full.rs"
required-features = ["storage"]

[[example]]
name = "agent_storage_conversation"
path = "examples/agent_storage_conversation.rs"
required-features = ["storage"]

[[example]]
name = "azure_basic"
path = "examples/azure_basic.rs"

[[example]]
name = "cerebras_basic_chat"
path = "examples/cerebras_basic_chat.rs"

[[example]]
name = "cerebras_streaming_chat"
path = "examples/cerebras_streaming_chat.rs"

[[example]]
name = "cerebras_tool_calling"
path = "examples/cerebras_tool_calling.rs"

[[example]]
name = "cerebras_reasoning"
path = "examples/cerebras_reasoning.rs"

[[example]]
name = "xai_basic_chat"
path = "examples/xai_basic_chat.rs"

