[workspace]
resolver = "3"
members = [
    "llm-kit-core",
    "llm-kit-provider",
    "llm-kit-provider-utils",
    "llm-kit-openai-compatible",
    "llm-kit-openai",
    "llm-kit-storage",
    "llm-kit-storage-filesystem",
    "llm-kit-anthropic",
    "llm-kit-azure",
    "llm-kit-cerebras",
    "llm-kit-deepseek",
    "llm-kit-elevenlabs",
    "llm-kit-groq",
    "llm-kit-xai",
    "llm-kit-togetherai",
    "llm-kit-huggingface",
    "llm-kit-assemblyai",
    "llm-kit-baseten",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["saribmahmood55@gmail.com"]
repository = "https://github.com/saribmah/llm-kit"

[workspace.dependencies]

# Virtual package for workspace-level examples
[package]
name = "llm-kit-examples"
version.workspace = true
edition.workspace = true
publish = false

[features]
storage = ["llm-kit-core/storage"]

[dependencies]
llm-kit-core = { path = "llm-kit-core", features = ["storage"] }
llm-kit-provider = { path = "llm-kit-provider" }
llm-kit-provider-utils = { path = "llm-kit-provider-utils" }
llm-kit-openai-compatible = { path = "llm-kit-openai-compatible" }
llm-kit-storage = { path = "llm-kit-storage" }
llm-kit-storage-filesystem = { path = "llm-kit-storage-filesystem" }
llm-kit-azure = { path = "llm-kit-azure" }
llm-kit-cerebras = { path = "llm-kit-cerebras" }
llm-kit-groq = { path = "llm-kit-groq" }
llm-kit-xai = { path = "llm-kit-xai" }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
async-trait = "0.1"
schemars = "0.8"
chrono = "0.4"
dotenvy = "0.15"

[[example]]
name = "agent_generate"
path = "examples/agent_generate.rs"

[[example]]
name = "agent_stream"
path = "examples/agent_stream.rs"

[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"

[[example]]
name = "basic_embedding"
path = "examples/basic_embedding.rs"

[[example]]
name = "basic_image"
path = "examples/basic_image.rs"

[[example]]
name = "conversation"
path = "examples/conversation.rs"

[[example]]
name = "tool_calling"
path = "examples/tool_calling.rs"

[[example]]
name = "multi_step_tools"
path = "examples/multi_step_tools.rs"

[[example]]
name = "basic_stream"
path = "examples/basic_stream.rs"

[[example]]
name = "stream_transforms"
path = "examples/stream_transforms.rs"

[[example]]
name = "partial_output"
path = "examples/partial_output.rs"

[[example]]
name = "stream_tool_calling"
path = "examples/stream_tool_calling.rs"

[[example]]
name = "type_safe_tools"
path = "examples/type_safe_tools.rs"

[[example]]
name = "storage_basic"
path = "examples/storage_basic.rs"
required-features = ["storage"]

[[example]]
name = "storage_filesystem_basic"
path = "examples/storage_filesystem_basic.rs"
required-features = ["storage"]

[[example]]
name = "storage_filesystem_conversation"
path = "examples/storage_filesystem_conversation.rs"
required-features = ["storage"]

[[example]]
name = "storage_conversation_full"
path = "examples/storage_conversation_full.rs"
required-features = ["storage"]

[[example]]
name = "agent_storage_conversation"
path = "examples/agent_storage_conversation.rs"
required-features = ["storage"]

[[example]]
name = "azure_basic"
path = "examples/azure_basic.rs"

[[example]]
name = "cerebras_basic_chat"
path = "examples/cerebras_basic_chat.rs"

[[example]]
name = "cerebras_streaming_chat"
path = "examples/cerebras_streaming_chat.rs"

[[example]]
name = "cerebras_tool_calling"
path = "examples/cerebras_tool_calling.rs"

[[example]]
name = "cerebras_reasoning"
path = "examples/cerebras_reasoning.rs"

[[example]]
name = "xai_basic_chat"
path = "examples/xai_basic_chat.rs"

