[package]
name = "ai-sdk-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ai-sdk-provider = { path = "../ai-sdk-provider" }
ai-sdk-provider-utils = { path = "../ai-sdk-provider-utils" }
async-trait = "0.1"
base64 = "0.22.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
# HTTP client and async runtime
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.41", features = ["full"] }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1.9"
# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
ai-sdk-core = { path = "../ai-sdk-core" }
futures = "0.3"
chrono = "0.4"
