[package]
name = "ai-sdk-azure"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Azure OpenAI provider for AI SDK Rust"
homepage = "https://github.com/saribmah/ai-sdk"
repository = "https://github.com/saribmah/ai-sdk"
keywords = ["ai", "llm", "azure", "openai", "language-model"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
ai-sdk-provider = { path = "../ai-sdk-provider", version = "0.1.0" }
ai-sdk-openai-compatible = { path = "../ai-sdk-openai-compatible", version = "0.1.0" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
ai-sdk-core = { path = "../ai-sdk-core", version = "0.1.0" }
futures = "0.3"
