[package]
name = "ai-sdk-cerebras"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cerebras provider for the AI SDK"
repository = "https://github.com/example/ai-sdk"
homepage = "https://github.com/example/ai-sdk"
documentation = "https://docs.rs/ai-sdk-cerebras"
keywords = ["ai", "cerebras", "llm", "language-model"]
categories = ["api-bindings"]

[dependencies]
ai-sdk-provider = { path = "../ai-sdk-provider", version = "0.1.0" }
ai-sdk-openai-compatible = { path = "../ai-sdk-openai-compatible", version = "0.1.0" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ai-sdk-provider-utils = { path = "../ai-sdk-provider-utils", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
futures-util = "0.3"

[[example]]
name = "chat"
path = "examples/chat.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "chat_tool_calling"
path = "examples/chat_tool_calling.rs"

[[example]]
name = "stream_tool_calling"
path = "examples/stream_tool_calling.rs"
