[package]
name = "ai-sdk-huggingface"
version = "0.1.0"
edition = "2024"
authors = ["AI SDK Contributors"]
description = "Hugging Face provider for AI SDK Rust"
license = "MIT"
repository = "https://github.com/yourusername/ai-sdk"
keywords = ["ai", "llm", "huggingface", "language-model"]
categories = ["api-bindings"]

[dependencies]
ai-sdk-provider = { path = "../ai-sdk-provider" }
ai-sdk-provider-utils = { path = "../ai-sdk-provider-utils" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
async-stream = "0.3"
url = "2.5"
base64 = "0.22"
regex = "1.10"

[dev-dependencies]
ai-sdk-core = { path = "../ai-sdk-core" }
tokio = { version = "1.42", features = ["full", "test-util"] }
dotenv = "0.15"

[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"
