[package]
name = "llm-kit-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
llm-kit-provider = { path = "../ai-sdk-provider", version = "0.1.0" }
llm-kit-provider-utils = { path = "../ai-sdk-provider-utils", version = "0.1.0" }
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22.1"
bytes = "1.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1.41", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
