[package]
name = "ai-sdk-storage-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Filesystem storage provider for AI SDK Rust"

[dependencies]
# Workspace dependencies
ai-sdk-storage = { path = "../ai-sdk-storage" }

# Async trait support
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Async file operations
tokio = { version = "1.41", features = ["fs", "io-util"] }

# ID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
tempfile = "3.13"
