[package]
name = "ai-sdk-togetherai"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Together AI provider for AI SDK"
keywords = ["ai", "llm", "togetherai"]
categories = ["api-bindings"]

[dependencies]
ai-sdk-provider = { path = "../ai-sdk-provider" }
ai-sdk-openai-compatible = { path = "../ai-sdk-openai-compatible" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
futures-util = "0.3"
tokio-test = "0.4"

[lib]
path = "src/lib.rs"
