[package]
name = "ai-sdk-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared utilities for the AI SDK workspace"
keywords = ["ai", "utilities", "sdk"]
categories = ["api-bindings"]
readme = "../README.md"

[dependencies]
