[package]
name = "ai-sdk-xai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "xAI (Grok) provider implementation for the AI SDK - supports chat, image generation, and agentic tools"
keywords = ["ai", "xai", "grok", "llm", "provider"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
ai-sdk-provider = { path = "../ai-sdk-provider", version = "0.1.0" }
ai-sdk-provider-utils = { path = "../ai-sdk-provider-utils", version = "0.1.0" }
ai-sdk-openai-compatible = { path = "../ai-sdk-openai-compatible", version = "0.1.0" }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures-util = "0.3"
url = "2.5"
regex = "1.12"
base64 = "0.22.1"
uuid = { version = "1.11", features = ["v4"] }
async-stream = "0.3"
bytes = "1.9"

[dev-dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
