[package]
name = "llm-kit-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Anthropic provider for LLM Kit - Complete Claude integration with streaming, tools, thinking, and citations"
keywords = ["anthropic", "claude", "ai", "llm", "sdk"]
categories = ["api-bindings", "asynchronous", "web-programming"]
readme = "README.md"
documentation = "https://docs.rs/llm-kit-anthropic"

[dependencies]
llm-kit-provider = { path = "../llm-kit-provider", version = "0.1.0" }
llm-kit-provider-utils = { path = "../llm-kit-provider-utils", version = "0.1.0" }
async-trait = "0.1"
base64 = "0.22.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
# HTTP client and async runtime
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.41", features = ["full"] }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1.9"
# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
futures = "0.3"
chrono = "0.4"
