[package]
name = "llm-kit-azure"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Azure OpenAI provider for AI SDK Rust"
homepage = "https://github.com/saribmah/llm-kit"
repository = "https://github.com/saribmah/llm-kit"
keywords = ["ai", "llm", "azure", "openai", "language-model"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
llm-kit-provider = { path = "../llm-kit-provider", version = "0.1.0" }
llm-kit-openai-compatible = { path = "../llm-kit-openai-compatible", version = "0.1.0" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
