[package]
name = "llm-kit-baseten"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["AI SDK Team"]
description = "Baseten provider for LLM Kit"
license = "Apache-2.0"
repository = "https://github.com/saribmah/llm-kit"
keywords = ["ai", "ml", "baseten", "llm"]
categories = ["api-bindings", "web-programming"]

[dependencies]
llm-kit-provider = { path = "../llm-kit-provider", version = "0.1.0" }
llm-kit-openai-compatible = { path = "../llm-kit-openai-compatible", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
futures-util = "0.3"
