[package]
name = "llm-kit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core functionality for the AI SDK - unified interface for building AI-powered applications"
keywords = ["ai", "llm", "language-model", "openai", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "../README.md"

[dependencies]
llm-kit-provider-utils = { path = "../llm-kit-provider-utils", version = "0.1.0" }  # Provider utils types and traits
tokio = { version = "1.41", features = ["time"] }  # For async runtime and sleep
tokio-util = "0.7.16"  # For CancellationToken (equivalent to AbortSignal)
thiserror = "2.0.9"    # For error handling
base64 = "0.22.1"      # For base64 encoding/decoding
serde = { version = "1.0.228", features = ["derive"] }  # For serialization
serde_json = "1.0.145" # For JSON values
serde_bytes = "0.11"   # For efficient byte array serialization
schemars = "0.8"       # For JSON schema generation from Rust types
url = "2.5.7"          # For URL parsing
llm-kit-provider = { path = "../llm-kit-provider", version = "0.1.0" }  # Provider types and traits
llm-kit-storage = { path = "../llm-kit-storage", version = "0.1.0", optional = true }  # Optional storage functionality
async-stream = "0.3"   # For async generators
futures-util = "0.3"   # For Stream trait and StreamExt
async-trait = "0.1.89" # For async trait implementations
futures = "0.3"        # For future utilities like join_all
jsonschema = "0.29"    # For JSON Schema validation
reqwest = "0.12"       # For downloading audio/files from URLs
log = "0.4"            # For logging warnings
uuid = { version = "1.11", features = ["v4"] }  # For generating unique IDs
chrono = { version = "0.4", optional = true }  # For timestamps (storage feature)

[features]
default = []
storage = ["llm-kit-storage", "chrono"]  # Enable storage functionality

[dev-dependencies]
tokio = { version = "1.41", features = ["macros", "rt"] }  # For async tests
async-trait = "0.1.89"  # For async trait implementations in tests
regex = "1.12.2"  # For Regex in tests
llm-kit-storage-filesystem = { path = "../llm-kit-storage-filesystem", version = "0.1.0" }  # For storage tests
tempfile = "3.0"  # For temporary directories in storage tests
