[package]
name = "llm-kit-huggingface"
version = "0.1.0"
edition = "2024"
authors = ["LLM Kit Contributors"]
description = "Hugging Face provider for LLM Kit"
license = "MIT"
repository = "https://github.com/saribmah/llm-kit"
keywords = ["ai", "llm", "huggingface", "language-model"]
categories = ["api-bindings"]

[dependencies]
llm-kit-provider = { path = "../llm-kit-provider", version = "0.1.0" }
llm-kit-provider-utils = { path = "../llm-kit-provider-utils", version = "0.1.0" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
async-stream = "0.3"
url = "2.5"
base64 = "0.22"
regex = "1.10"

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }
